--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="icons8-юг-96.png">
     <!-- External CSS -->
-    <link rel="stylesheet" href="FF.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
